# scsh

./: .gitignore  .scsh.yml  AGENT-FLEET-DEMO.md  AGENTS.md  ASSUMPTIONS.md  CONTRIBUTING.md  Cargo.toml  DAEMON-JOBS.md  DAEMON-KEEPALIVE.md  DAEMON-PROCS.md  DAEMON.md  DEMO-BEAUTIFUL-LOOP.md  DEMO-BIG-BEAUTIFUL-BUILD.md  DEMO.md  GLOBAL-SKILLS-DEMO.md  HARNESS-SMOKE.md  HUMAN-CONFIG.md  LICENSE.md  README.md  RESILIENCE-DEMO.md  TEST-LOCAL-AGENTS-CREDENTIALS.md  build.rs  rustfmt.toml
.githooks/: pre-push
.github/workflows/: cargo-crates-publish.yml  ci.yml
.skills/: README.md
.skills/add/: SKILL.md
.skills/add/scripts/: add.py
.skills/big-beautiful-build/: SKILL.md
.skills/code-beautiful-review/: SKILL.md
.skills/conventions-reviewer/: SKILL.md
.skills/demo-pr/: SKILL.md
.skills/demo-pr/scripts/: demo_pr.py
.skills/fast-beautiful-forward/: SKILL.md
.skills/harness-smoke/: SKILL.md
.skills/justification-reviewer/: SKILL.md
.skills/multiply/: SKILL.md
.skills/multiply/scripts/: multiply.py
.skills/prepare-beautiful-pr/: SKILL.md
.skills/reviewability-reviewer/: SKILL.md
.skills/sanity-reviewer/: SKILL.md
.skills/scsh-harness-demo-and-selftest/: SKILL.md
.skills/send-beautiful-pr/: SKILL.md
.skills/subtract/: SKILL.md
.skills/subtract/scripts/: subtract.py
.skills/testing-reviewer/: SKILL.md
.skills/the-beautiful-loop/: SKILL.md
scripts/: check-pr-commits.py  check-release.py  check-version-above-crates-io.py  daemon-demo.sh  harness-smoke.sh  test_check_pr_commits.py  test_check_release.py  workflow-graph-selftest.mjs
src/: Dockerfile  annotate.rs  config.rs  demo.scsh.yml  export.rs  failure.rs  fleet.rs  gc.rs  harness_def.rs  json.rs  licenses.rs  main.rs  ptyrec.rs  quota.rs  runtime.rs  sha1.rs  sha256.rs  stats.rs  version.rs
src/daemon/: castprobe.rs  client.rs  db.rs  jsonio.rs  mod.rs  model.rs  paths.rs  prune.rs  reap.rs  server.rs  setup.rs  supervisor.rs  websocket.rs  workflow.rs
src/daemon/html/: cast.rs  client_js.rs  escape.rs  fleet.rs  format.rs  index.rs  layout.rs  mod.rs  proc.rs  session.rs  session_export.rs  stats.rs  tests.rs  workflow.rs
src/daemon/html/player/: README.md  player.css  player.js  vt.js
src/demo_beautiful/: CONTRIBUTING.md  README.md  test_wordstats.py  wordstats.py
src/harness_defs/: add.yml  arith.yml  big-beautiful-build.yml  code-review.yml  commit-summary.yml  demo-beautiful-loop.yml  demo-fantastic-loop.yml  demo-loop-break.yml  demo-loop-do-while.yml  demo-loop-repeat.yml  demo-pr.yml  doctor.yml  fruits.yml  gorgeous-pipeline.yml  greet.yml  research.yml  smoke-pr-claude.yml  smoke-pr-codex.yml  smoke-pr-cursor.yml  smoke-pr-grok.yml
src/ui/: clock.rs  demo.rs  engine.rs  live.rs  mod.rs  screen.rs  signals.rs
tests/: cli.rs
tests/fixtures/: claude-add.scsh.yml  claude-only.scsh.yml  minimal-opencode.scsh.yml  single-profile-a.scsh.yml  two-profile.scsh.yml  two-route-demo.scsh.yml
