[package]
name = "scsh"
version = "1.12.0"
edition = "2021"
description = "Scoped Skills Helper — preflight a git repo and run its scoped skills in ephemeral containers."
license = "MIT"
repository = "https://github.com/dkorolev/scsh"

[[bin]]
name = "scsh"
path = "src/main.rs"

# scsh keeps its own logic dependency-free; these crates only support the terminal UX.
# `crossterm` drives the interactive live board — raw mode, mouse reporting, the alternate
# screen, and key/mouse/resize events — so each long step is a collapsible row you click to
# expand and scroll (no `derive-more` feature: it needs a newer rustc than scsh targets).
# `console` does the cross-cutting text bits crossterm doesn't: NO_COLOR / TTY-aware colour,
# ANSI stripping, and Unicode-aware width/truncation. `signal-hook` is a **safe** way to catch
# terminal signals (std has none), so a kill restores the terminal and tears the (isolated)
# child process groups down instead of orphaning containers.
[dependencies]
console = "0.16"
signal-hook = "0.4"
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
# The session-browser daemon persists its store in an embedded, pure-Rust ACID key-value
# DB (`~/.scsh/daemon-<port>.redb`), written per-session rather than rewriting one growing
# JSON file every tick. redb is single-purpose, dependency-light, and needs no server.
redb = "4.1"
# `beecast-page` turns a recorded cast (+ chapters) into one self-contained offline HTML
# player page (`scsh export-cast`). It earns its place: zero transitive dependencies (a
# one-line `cargo tree`), it *is* the page pipeline scsh would otherwise have to duplicate
# — the page template, the embedded first-party `scsh-cast-player` (0.3.0 dropped the
# Apache-2.0 asciinema-player; everything is MIT now), and the strict `<script>`-safe
# escaping — and its pages are byte-identical to the ones `beecast` itself exports.
beecast-page = "0.3"

# Tuned for a small, self-contained release binary. `cargo test` uses the dev
# profile (unwinding), so these settings do not affect the test run.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
